; ModuleID = '/home/carl/AnghaBench/libgit2/tests/merge/extr_annotated_commit.c_test_merge_annotated_commit__lookup_annotated_tag.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/merge/extr_annotated_commit.c_test_merge_annotated_commit__lookup_annotated_tag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"refs/tags/test\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_merge_annotated_commit__lookup_annotated_tag() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = load i32, i32* @g_repo, align 4
  %4 = call i32 @git_reference_lookup(i32** %2, i32 %3, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %5 = call i32 @cl_git_pass(i32 %4)
  %6 = load i32, i32* @g_repo, align 4
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @git_annotated_commit_from_ref(i32** %1, i32 %6, i32* %7)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32*, i32** %1, align 8
  %11 = call i32 @git_annotated_commit_free(i32* %10)
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @git_reference_free(i32* %12)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_reference_lookup(i32**, i32, i8*) #1

declare dso_local i32 @git_annotated_commit_from_ref(i32**, i32, i32*) #1

declare dso_local i32 @git_annotated_commit_free(i32*) #1

declare dso_local i32 @git_reference_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
